# EmmyLuaDebugger

./:  .travis.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml
.github/workflows/: build.yml
Shared/: shme.cpp  shme.h
android/: readme.txt
build_script/: android.bat  readme.md
build_script/lua_exe/: CMakeLists.txt  buildLua51.ps1  buildLua52.ps1  buildLua53.ps1  buildLua54.ps1  readme.md
build_script/xlua_emmy_core/: CMakeLists.txt  readme.md
cmake/: flags_override.cmake  zig-build.cmake
docs/: EmmyLua全平台调试的一种解决方案.md
emmy_core/: CMakeLists.txt  dllmain.c  dllmain.cpp  emmy_core.cpp  emmy_core.h  emmy_debugger.cpp  emmy_debugger.h  emmy_facade.cpp  emmy_facade.h  emmy_facade.hook.cpp  emmy_helper_lib.cpp  hook_state.cpp  hook_state.h  lua_guard.cpp  lua_guard.h  stack.cpp  transporter.cpp  transporter.h  types.h
emmy_core/api/: lua_api.cpp  lua_api.h  lua_api_loader.cpp  lua_api_loader.h
emmy_core/hook/: emmy_hook.cpp  emmy_hook.h  emmy_hook.windows.cpp
emmy_core/lua_copy/: lua_api.cpp  lua_api.h
emmy_core/proto/: pipeline_client_transporter.cpp  pipeline_client_transporter.h  pipeline_server_transporter.cpp  pipeline_server_transporter.h  proto.ts  socket_client_transporter.cpp  socket_client_transporter.h  socket_server_transporter.cpp  socket_server_transporter.h
emmy_core/src/: emmy_core.cpp
emmy_debugger/: CMakeLists.txt
emmy_debugger/include/emmy_debugger/: emmy_facade.h  util.h
emmy_debugger/include/emmy_debugger/api/: lua_api.h  lua_api_loader.h  lua_state.h  lua_version.h
emmy_debugger/include/emmy_debugger/arena/: arena.h
emmy_debugger/include/emmy_debugger/debugger/: emmy_debugger.h  emmy_debugger_lib.h  emmy_debugger_manager.h  extension_point.h  hook_state.h
emmy_debugger/include/emmy_debugger/proto/: proto.h  proto.ts  proto_handler.h
emmy_debugger/include/emmy_debugger/transporter/: pipeline_client_transporter.h  pipeline_server_transporter.h  socket_client_transporter.h  socket_server_transporter.h  transporter.h
emmy_debugger/src/: emmy_debugger.cpp  emmy_debugger_lib.cpp  emmy_debugger_manager.cpp  emmy_facade.cpp  emmy_helper.cpp  extension_point.cpp  hook_state.cpp  lua_version.cpp  stack.cpp  transporter.cpp  util.cpp
emmy_debugger/src/api/: lua_api.cpp  lua_api_loader.cpp  lua_state.cpp  lua_version.cpp
emmy_debugger/src/api/lua_state/: lua_state_51.cpp  lua_state_52.cpp  lua_state_53.cpp  lua_state_54.cpp  lua_state_55.cpp  lua_state_jit.cpp
emmy_debugger/src/arena/: arena.cpp
emmy_debugger/src/debugger/: emmy_debugger.cpp  emmy_debugger_lib.cpp  emmy_debugger_manager.cpp  extension_point.cpp  hook_state.cpp
emmy_debugger/src/proto/: pipeline_client_transporter.cpp  pipeline_server_transporter.cpp  proto.cpp  proto_handler.cpp  socket_client_transporter.cpp  socket_server_transporter.cpp
emmy_debugger/src/transporter/: pipeline_client_transporter.cpp  pipeline_server_transporter.cpp  socket_client_transporter.cpp  socket_server_transporter.cpp  transporter.cpp
emmy_hook/: CMakeLists.txt
emmy_hook/src/: dllmain.cpp  emmy_hook.cpp  emmy_hook.h  emmy_hook.windows.cpp
emmy_hook/src/libpe/: htable.cpp  htable.h  libpe.cpp  libpe.h  llist.cpp  llist.h
emmy_tool/: CMakeLists.txt  command_line.cpp  command_line.h  emmy_tool.h  emmy_tool.windows.cpp  main.cpp  utility.cpp  utility.h
emmy_tool/src/: command_line.cpp  command_line.h  emmy_tool.cpp  emmy_tool.h  emmy_tool.windows.cpp  main.cpp  utility.cpp  utility.h
emmy_tool/src/windows/: emmy_tool.windows.cpp  utility.cpp  utility.h
include/emmy_core/: emmy_core.h
include/emmy_debugger/: emmy_debugger.h  emmy_debugger_lib.h  emmy_debugger_manager.h  emmy_facade.h  emmy_helper.h  extension_point.h  hook_state.h  lua_version.h  transporter.h  types.h
include/emmy_debugger/api/: lua_api.h  lua_api_loader.h  lua_state.h
include/emmy_debugger/proto/: pipeline_client_transporter.h  pipeline_server_transporter.h  proto.ts  socket_client_transporter.h  socket_server_transporter.h
include/emmy_hook/: emmy_hook.h
include/shared/: shme.h
shared/: CMakeLists.txt
shared/src/: shme.cpp
